# mglyph

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
docs/: PyPI-info.md
docs/source/: conf.py
mglyph/: __init__.py  mglyph.py
src/: __init__.py  canvas.py  colormap.py  constants.py  convert.py  mglyph.py  transform.py
tutorials/: illustrations.ipynb  mglyph tutorial.ipynb  mglyph zoo.ipynb  mglyph_tutorial.ipynb  mlgyph zoo.ipynb  problems.ipynb  zoo.ipynb
