[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mglyph"

version = "1.0.0"

dependencies = [
    'numpy',
    'skia-python',
    'colour'
]

requires-python = ">=3.7"

authors = [
  {name = "Vojtech Bartl", email = "ibartl@fit.vut.cz"},
  {name = "Adam Herout", email = "herout@fit.vut.cz"},
  {name = "Another person", email="another@mail.com"}
]

description = "The Mglyph module"
readme = "README.md"
license = {file = "LICENSE"} 

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://tmgc.fit.vutbr.cz"
Documentation = "https://readthedocs.org"
Repository = "https://git.fit.vutbr.cz/herout/mglyph.git"

[tool.setuptools]
packages = ["mglyph"]
